--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "warden",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.ts"
