--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "test": "jest",
     "dev": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "types": [
+    "vitest/globals"
+  ],
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.11",
@@ -24,17 +25,10 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.13.3",
-    "ts-jest": "^29.3.4"
+    "pg": "^8.13.3"
   },
   "devDependencies": {
-    "@types/superagent": "^8.1.9",
-    "@types/supertest": "^6.0.3",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "superagent": "^10.2.1",
-    "supertest": "^7.1.1",
-    "ts-node": "^10.9.2",
-    "tsviz-cli": "^2.0.3"
+    "ts-node": "^10.9.2"
   }
 }
