--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "graph": "tplant --input src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +26,11 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "tplant": "^3.1.3"
   },
   "devDependencies": {
+    "dependency-cruiser": "^16.10.4",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   }
