--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "graph": "tplant --input src/**/*.ts"
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "types": [
-    "vitest/globals"
-  ],
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
@@ -26,11 +22,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.13.3",
-    "tplant": "^3.1.3"
+    "pg": "^8.13.3"
   },
   "devDependencies": {
-    "dependency-cruiser": "^16.10.4",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   }
